2000-11-19  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* man/smtpserver.8, smtpserver/policytest.c:
	    Lowercasify the lookup key for alias item lookups,
	    and fill in the doc/guides/smtp-policy header into
	    the manual page of the smtpserver.

2000-11-17  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/threads.c, scheduler/mailq.c:
	    Some experiments of making the  mailq-v2  mode mailq
	    to show same things as the old version was able with
	    'verbose' mode turned on.

	* **/Makefile.in:
	    Changes on what we refer at LIBDEB= definitions.

	* transports/libta/mimeheaders.c:
	    - Missing initialization of one buffer -> result is
	      memory scrible and utter chaos..
	    - Wondering of X-Warning: writer does something fishy,
	      as the Received: header generated by the site where
	      that writer is used does not appear in the message..

	* proto/scheduler.conf.in, proto/db/routes:
	    Define channel   smtp-log  which (obviously) logs
	    the SMTP protocol into log-file.  See "-l" option
	    at  smtp(8) man-page.

2000-11-16  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* configure.in:
	    Some reworking around NDBM tests -- we *MAY* have
	    problems when <ndbm.h> is actually from BSD DB 1.85.
	    Specifically in OpenBSD 2.7, several other BSDs as well.

	* transports/smtp/getmxrr.c, scheduler/mailq.c,
	  libc/myhostname.c:
	    BSD  getaddrinfo()  call returns ai_canonname member as NULL
	    in very common cases!  Uargh :-(

	* lib/Makefile.in:
	    At  'make selfaddrs-test', do use autoconfigured @LIBRESOLV@
	    library reference.

2000-11-14  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* lib/selfaddrs.c, lib/zgetifaddress.c:
	    Fix the support for FreeBSD 4.2*/OpenBSD 2.7* featured
	    getifaddrs() function.

	* Makefile.in:
	    Mark version "2.99.55-pre1cvs" (which means nothing much)

	* include/ta.h, transports/libta/fwriteheaders.c,