@@ -259,7 +259,7 @@ struct sockaddr ***sockaddrp;
 #ifdef SIOCGLIFFLAGS
 
 	    /* memset(&lifrf, 0, sizeof(struct lifreq)); */
-	    lifrf.lifr_ifindex = 0;
+	    lifrf.lifr_index = 0;
 	    strncpy(lifrf.lifr_name, lifr->lifr_name, sizeof(lifrf.lifr_name));
 
 	    if (ioctl(s, SIOCGLIFFLAGS, (char *) &lifrf) < 0)
@@ -402,7 +402,7 @@ done_this_ipv6:
 #ifdef SIOCGIFFLAGS
 
 	    /* memset(&ifrf, 0, sizeof(struct ifreq)); */
-	    ifrf.ifr_ifindex = 0;
+	    ifrf.ifr_index = 0;
 	    strncpy(ifrf.ifr_name, ifr->ifr_name, sizeof(ifrf.ifr_name));
 
 	    if (ioctl(s, SIOCGIFFLAGS, (char *) &ifrf) < 0)
