@@ -1,3 +1,8 @@
+2000-11-21  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* lib/selfaddrs.c:
+	    there is no field called ifr_ifindex, there is: ifr_index
+
 2000-11-19  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* man/smtpserver.8, smtpserver/policytest.c:
